<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:id="@+id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/input"
        android:background="@drawable/login_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_below="@id/image">
        <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:id="@+id/accounts" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/account" android:maxLines="1" android:maxLength="50"/>
        <View android:background="#ffc0c3c4" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="1.0px" android:layout_marginRight="1.0px" />
        <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center_vertical" android:id="@+id/password" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/password" android:maxLines="1" android:maxLength="50" android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:textSize="18.0sp"
        android:textColor="#ff333333"
        android:gravity="center"
        android:id="@+id/login"
        android:background="@drawable/chat_send_button_bg"
        android:paddingTop="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginTop="12.0dip"
        android:layout_marginRight="28.0dip"
        android:text="@string/login"
        android:layout_below="@id/input" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_below="@id/login"
        android:layout_weight="1" android:id="@+id/relativeLayout">
        <Button  android:textSize="12.0sp" android:textColor="#ffffffff" android:layout_alignParentRight="true" android:gravity="left|center"  android:id="@+id/regist" android:background="@drawable/login_regist_bg" android:paddingLeft="8.0dip" android:paddingRight="18.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register2" />
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton" android:layout_gravity="center_vertical" android:src="@drawable/qq"/>
        <ImageButton
                android:layout_width="118dp"
                android:layout_height="114dp"
                android:id="@+id/imageButton2" android:layout_gravity="center_vertical" android:src="@drawable/weixin"/>
    </LinearLayout>

</RelativeLayout>
