<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:orientation="vertical"
        android:background="@drawable/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dip">
        <TextView android:layout_centerInParent="true" android:textSize="20.0sp" android:textColor="@color/white"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qr_register" />
    </RelativeLayout>


    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_below="@id/image" android:layout_marginTop="40dip">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageView
                    android:layout_width="20dip"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView2" android:src="@drawable/s_user" android:layout_marginLeft="10dip"/>
            <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:id="@+id/username" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/account" android:maxLines="1" android:maxLength="50"/>
        </LinearLayout>
        <View android:background="#ffc0c3c4" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="1.0px" android:layout_marginRight="1.0px" />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginTop="10dip">
            <ImageView android:layout_width="20dip" android:layout_height="fill_parent" android:id="@+id/imageView3"
                       android:src="@drawable/pwd" android:layout_marginLeft="10dip"/>
            <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center_vertical" android:id="@+id/password" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/password" android:maxLines="1" android:maxLength="50" android:inputType="textPassword" />
        </LinearLayout>
        <View android:background="#ffc0c3c4" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="1.0px" android:layout_marginRight="1.0px" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_marginTop="10dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="您继续注册则默认您已经同意注册条款"
                  android:id="@+id/textView2" android:textColor="#c9cacc" android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
            android:textSize="18.0sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:onClick="onClick"
            android:background="#ee1d6d"
            android:paddingTop="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginTop="30.0dip"
            android:layout_marginRight="28.0dip"
            android:text="注册" />

</LinearLayout>
