<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="40dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="#00ffffff"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:paddingTop="12dip"
                android:phoneNumber="true"
                android:textColor="#ff1d1d1d"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="#00ffffff"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ff666666"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ff666666"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="30.0dip"
        android:background="#ee1d6d"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingTop="5.0dip"
        android:text="确定"
        android:textColor="#FFFFFF"
        android:textSize="18.0sp" />

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/sm_progressbar"
        style="@style/GPlusProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-9dp"
        android:indeterminate="true"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:visibility="gone" />
</LinearLayout>
