<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_marginTop="20dip"
            android:orientation="vertical">

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                android:id="@+id/sm_progressbar"
                style="@style/GPlusProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-9dp"
                android:indeterminate="true"
                android:paddingLeft="1dip"
                android:paddingRight="1dip"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/s_user" />

                <EditText
                    android:id="@+id/accounts"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="#00ffffff"
                    android:hint="@string/account"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="12.0dip"
                    android:phoneNumber="true"
                    android:textColor="#ff1d1d1d"
                    android:textColorHint="#ff666666"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginLeft="1.0px"
                android:layout_marginRight="1.0px"
                android:background="#ffc0c3c4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/pwd" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="#00ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="12.0dip"
                    android:textColor="#ff1d1d1d"
                    android:textColorHint="#ff666666"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginLeft="1.0px"
                android:layout_marginRight="1.0px"
                android:background="#ffc0c3c4" />
        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_marginTop="10.0dip"
            android:background="#ee1d6d"
            android:gravity="center"
            android:paddingTop="5.0dip"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="18.0sp" />

        <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="8.0dip">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:singleLine="true"
                android:text="立即注册"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#c9cacc" />

            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:singleLine="true"
                android:text="@string/reset_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#c9cacc" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/or" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="或者选择您的社交账户快速登录丽图"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ee1d6d" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/border"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onQQClick"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="#00000000"
                        android:onClick="onQQClick"
                        android:scaleType="fitCenter"
                        android:src="@drawable/qq" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:text="QQ"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dip"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_marginLeft="10dip"
                    android:background="@drawable/border"
                    android:gravity="center_horizontal"
                    android:onClick="onWeiXinClick"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="#00000000"
                        android:onClick="onWeiXinClick"
                        android:scaleType="fitCenter"
                        android:src="@drawable/weixin" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="微信"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>